!!!!!!!!!!!!!!!NOTE - NOTE!!!!!!!!!!!!!!!!!!!!!
Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp and com.tightdb.internal.Util.java
      when the JNI interface is changed.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

06-February-2014:
=================
+ Added get-version and set-version to build.sh.

04-February-2014:
=================
+ Query.subtable() and Query.endSubtable() is now implemented.
! API Breaking change: The following methods in both Table and TableView class
  has been renamed to be consistent with other methods:
  - sumInt()     -> sumLong().
  - maximumInt() -> maximumLong().
  - minimumInt() -> minimumLong().
  - averageInt() -> averageLong().
 + Accessing a TableView after it's parent table has been changed, is now detected,
   and an exception is thrown.
 + Version API introduced. Not to be documented yet.

18-December-2013:
=================
! Bugfix: Table and TableView's findFirst*() methods now correctly returns -1
on 32 bit architectures when the value can't be found.

12-December-2013:
================
! BREAKING CHANGE: SubTableSchema renamed to SubtableSchema.
! BREAKING CHANGE: All methods with *subTable* renamed to *subtable*.

25-November-2013:
================
+ Query objects are now validated when executed to avoid breaking core.

19-November-2013:
================
+ Added sort() to views in typed interface on bool, date and int columns.
+ Check for returning -1 on 32-bit machines, when e.g. column name not found.

14-November-2013:
================
+ SQLite examples now runs on JDK 7.

11-November-2013:
================
+ table.getSortedView now uses native method - making it faster.

07-November-2013:
================
+ Avoiding more namespace issues when defining typed tables.
+ Added com.tightdb.IllegalMixedTypeException as a runtime exception. Is thrown when getting a wrong type from a Mixed object.

06-November-2013:
================
+ Added getSourceRowIndex() method on TableView.
