@@ -3,6 +3,11 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
       when the JNI interface is changed.
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
+24-March-2014:
+=================
+! API Breaking change: Group.getTable now only retrieves tables, and returns null if it does not exist.
++ Added Group.createTable to create new tables.
+
 06-February-2014:
 =================
 + Added get-version and set-version to build.sh.
